<resources>
    <string name="activity_battery_optimizations_conclusion">If in trouble visit https://dontkillmyapp.com. It provides detailed instructions on how to disable any power-saving features that may affect app\'s performance.</string>
    <string name="activity_battery_optimizations_summary">Please disable battery optimizations for media playback while the screen is off.</string>
    <string name="activity_battery_optimizations_title">Battery Optimizations</string>
    <string name="activity_info_offline_mode">Offline mode</string>
    <string name="album_bottom_sheet_add_to_playlist">Add to playlist</string>
    <string name="album_bottom_sheet_add_to_queue">Add to queue</string>
    <string name="album_bottom_sheet_download_all">Download all</string>
    <string name="album_bottom_sheet_go_to_artist">Go to artist</string>
    <string name="album_bottom_sheet_instant_mix">Instant mix</string>
    <string name="album_bottom_sheet_play_next">Play next</string>
    <string name="album_bottom_sheet_remove_all">Remove all</string>
    <string name="album_bottom_sheet_share">Share</string>
    <string name="album_bottom_sheet_shuffle">Shuffle</string>
    <string name="album_catalogue_title">Albums</string>
    <string name="album_catalogue_title_expanded">Browse Albums</string>
    <string name="album_error_retrieving_artist">Error retrieving artist</string>
    <string name="album_list_page_downloaded">Downloaded albums</string>
    <string name="album_list_page_most_played">Most played albums</string>
    <string name="album_list_page_new_releases">New releases</string>
    <string name="album_list_page_recently_added">Recently added albums</string>
    <string name="album_list_page_recently_played">Recently played albums</string>
    <string name="album_list_page_starred">Starred albums</string>
    <string name="album_list_page_title">Albums</string>
    <string name="album_page_extra_info_button">More like this</string>
    <string name="album_page_play_button">Play</string>
    <string name="album_page_release_date_label">Released on %1$s</string>
    <string name="album_page_release_dates_label">Released on %1$s, originally %2$s</string>
    <string name="album_page_shuffle_button">Shuffle</string>
    <string name="album_page_tracks_count_and_duration">%1$d songs  •  %2$d minutes</string>
    <string name="app_name">Tempus-ng</string>
    <string name="artist_adapter_radio_station_starting">Searching…</string>
    <string name="artist_bottom_sheet_instant_mix">Instant mix</string>
    <string name="artist_bottom_sheet_shuffle">Shuffle</string>
    <string name="artist_catalogue_title">Artists</string>
    <string name="artist_catalogue_title_expanded">Browse Artists</string>
    <string name="artist_error_retrieving_radio">Error retrieving artist\'s radio</string>
    <string name="artist_error_retrieving_tracks">Error retrieving artist\'s tracks</string>
    <string name="artist_list_page_downloaded">Downloaded artists</string>
    <string name="artist_list_page_recently_played">Recently played artists</string>
    <string name="artist_list_page_top_played">Top played artists</string>
    <string name="artist_list_page_starred">Starred artists</string>
    <string name="artist_list_page_title">Artists</string>
    <string name="artist_no_artist_info_toast">No additional artist info</string>
    <string name="artist_page_radio_button">Radio</string>
    <string name="artist_page_shuffle_button">Shuffle</string>
    <string name="artist_page_switch_layout_button">Switch layout</string>
    <string name="artist_page_title_album_more_like_this_button">More like this</string>
    <string name="artist_page_title_album_section">Albums</string>
    <string name="artist_page_title_ep_section">EPs</string>
    <string name="artist_page_title_single_section">Singles</string>
    <string name="artist_page_title_appears_on_section">Appears On</string>
    <string name="artist_page_title_biography_more_button">More</string>
    <string name="artist_page_title_biography_section">Biography</string>
    <string name="artist_page_title_most_streamed_song_section">Top Songs</string>
    <string name="artist_page_title_most_streamed_song_see_all_button">See all</string>
    <string name="battery_optimization_negative_button">Ignore</string>
    <string name="battery_optimization_neutral_button">Don\'t ask again</string>
    <string name="battery_optimization_positive_button">Disable</string>
    <string name="bottom_sheet_generating_instant_mix">Generating instant mix...</string>
    <string name="bottom_sheet_problem_generating_instant_mix">Could not retrieve tracks from subsonic server.</string>
    <string name="connection_alert_dialog_negative_button">Cancel</string>
    <string name="connection_alert_dialog_neutral_button">Enable data saver</string>
    <string name="connection_alert_dialog_positive_button">OK</string>
    <string name="connection_alert_dialog_summary">Access to the Subsonic server on connections other than Wi-Fi has been restricted. To prevent this alert dialog from reappearing, disable the connection check in the app settings.</string>
    <string name="connection_alert_dialog_title">Wi-Fi not connected</string>
    <string name="content_description_shuffle_button">Shuffle</string>
    <string name="delete_download_storage_dialog_negative_button">Cancel</string>
    <string name="delete_download_storage_dialog_positive_button">Continue</string>
    <string name="delete_download_storage_dialog_summary">Please be aware that continuing with this action will result in the permanent deletion of all saved items downloaded from all servers.</string>
    <string name="delete_download_storage_dialog_title">Delete saved items</string>
    <string name="description_empty_title">No lyrics available</string>
    <string name="disc_titlefull">Disc %1$s - %2$s</string>
    <string name="disc_titleless">Disc %1$s</string>
    <string name="download_directory_dialog_negative_button">Cancel</string>
    <string name="download_directory_dialog_positive_button">Download</string>
    <string name="download_directory_dialog_summary">All tracks in this folder will be downloaded. Tracks present in subfolders will not be downloaded.</string>
    <string name="download_directory_dialog_title">Download the tracks</string>
    <string name="download_directory_set">Set where music is downloaded</string>
    <string name="download_info_empty_subtitle">Once you download a song, you\'ll find it here</string>
    <string name="download_info_empty_title">No downloads yet!</string>
    <string name="download_item_multiple_subtitle_formatter">%1$s  •  %2$s items</string>
    <string name="download_item_single_subtitle_formatter">%1$s items</string>
    <string name="download_shuffle_all_subtitle">Shuffle all</string>
    <string name="download_storage_dialog_sub_summary">For the changes to take effect, restart the app.</string>
    <string name="download_storage_dialog_summary">Changing the destination of downloaded files from one storage to another will result in the immediate deletion of any previously downloaded files in the other storage.</string>
    <string name="download_storage_dialog_title">Select storage option</string>
    <string name="download_storage_external_dialog_positive_button">External</string>
    <string name="download_storage_internal_dialog_negative_button">Internal</string>
    <string name="download_storage_directory_dialog_neutral_button">Directory</string>
    <string name="download_title_section">Downloads</string>
    <string name="download_refresh_no_directory">Set a download folder to refresh your downloads.</string>
    <string name="download_refresh_no_changes">No missing downloads found.</string>
    <plurals name="download_refresh_removed">
        <item quantity="one">Removed %d missing download.</item>
        <item quantity="other">Removed %d missing downloads.</item>
    </plurals>
    <string name="download_refresh_button_content_description">Refresh downloaded items</string>
    <string name="downloaded_bottom_sheet_add_to_queue">Add to queue</string>
    <string name="downloaded_bottom_sheet_play_next">Play next</string>
    <string name="downloaded_bottom_sheet_remove">Remove</string>
    <string name="downloaded_bottom_sheet_remove_all">Remove all</string>
    <string name="downloaded_bottom_sheet_shuffle">Shuffle</string>
    <string name="empty_string" />
    <string name="error_required">Required</string>
    <string name="error_server_prefix">http or https prefix required</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_controls_heart_off_description">Toggle Heart off</string>
    <string name="exo_controls_heart_on_description">Toggle Heart on</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="filter_info_selection">Select two or more filters</string>
    <string name="filter_title">Filter</string>
    <string name="filter_artist">Filter artists</string>
    <string name="filter_title_expanded">Filter Genres</string>
    <string name="generic_list_page_count">(%1$d)</string>
    <string name="generic_list_page_count_unknown">(+%1$d)</string>
    <string name="genre_catalogue_title">Genre Catalogue</string>
    <string name="genre_catalogue_title_expanded">Browse Genres</string>
    <string name="github_update_dialog_negative_button">Remind me later</string>
    <string name="github_update_dialog_neutral_button">Support me</string>
    <string name="github_update_dialog_positive_button">Download now</string>
    <string name="github_update_dialog_summary">There is a new version of the app available on Github.</string>
    <string name="github_update_dialog_title">Update available</string>
    <string name="home_rearrangement_dialog_negative_button">Cancel</string>
    <string name="home_rearrangement_dialog_neutral_button">Reset</string>
    <string name="home_rearrangement_dialog_positive_button">Save</string>
    <string name="home_rearrangement_dialog_title">Rearrange home</string>
    <string name="home_rearrangement_dialog_subtitle">Please note that in order for the changes made to take effect, it is necessary to restart the application.</string>
    <string name="home_section_music">Music</string>
    <string name="home_section_podcast">Podcast</string>
    <string name="home_section_radio">Radio</string>
    <string name="home_subtitle_best_of">Top songs of your favorite artists</string>
    <string name="home_subtitle_made_for_you">Start mix from a song you liked</string>
    <string name="home_subtitle_new_internet_radio_station">Add a new radio</string>
    <string name="home_subtitle_new_podcast_channel">Add a new podcast channel</string>
    <string name="home_sync_starred_cancel">Cancel</string>
    <string name="home_sync_starred_download">Download</string>
    <string name="home_sync_starred_subtitle">Downloading these tracks may involve significant data usage</string>
    <string name="home_sync_starred_title">Looks like there are some starred tracks to sync</string>
    <string name="label_placeholder" translatable="false">--</string>
    <string name="menu_download_label">Download</string>
    <string name="menu_home_label">Home</string>
    <string name="menu_library_label">Library</string>
    <string name="menu_search_button">Search</string>
    <string name="menu_settings_button">Settings</string>
    <string name="playlist_chooser_dialog_empty">No playlists created</string>
    <string name="playlist_chooser_dialog_cancel_button">Cancel</string>
    <string name="playlist_chooser_dialog_create_button">Create</string>
    <string name="playlist_chooser_dialog_visibility_switch_label">Mark the playlist as public</string>
    <string name="playlist_chooser_dialog_visibility_summary">The server updates the visibility on each request. By default it is set to private.</string>
</resources>